# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./sources";
 export * from "./flashcards";
+export * from "./questions";
